优化网站布局和样式：删除page-header，修复导航栏遮挡问题，优化team页面图片显示，合并研究方向页面

--- a/contact.html
+++ b/contact.html
@@ -10,44 +10,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
   <style>
-    /* 联系方式页特有样式 */
-    .page-header {
-      background-color: var(--light-gray);
-      padding: 120px 0 60px;
-      text-align: center;
-      position: relative;
-    }
-
-    .page-header::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-image: url('images/contact-bg.jpg');
-      background-size: cover;
-      background-position: center;
-      opacity: 0.1;
-      z-index: 1;
-    }
-
-    .page-header-content {
-      position: relative;
-      z-index: 2;
-    }
-
-    .page-header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-
-    .page-header p {
-      max-width: 800px;
-      margin: 0 auto;
-      color: var(--dark-gray);
-    }
-
     .breadcrumb {
       list-style: none;
       display: flex;
@@ -68,6 +30,10 @@
       margin: 0 10px;
       font-size: 0.8rem;
       color: var(--dark-gray);
+    }
+
+    .contact-section {
+      padding: 60px 0;
     }
 
     .contact-container {
@@ -408,250 +374,251 @@
           <h1>SPIN Lab</h1>
         </a>
       </div>
-      <nav class="main-nav">
-        <ul>
-          <li><a href="index.html">首页</a></li>
-          <li><a href="about.html">实验室简介</a></li>
-          <li><a href="research.html">研究方向</a></li>
-          <li><a href="team.html">团队成员</a></li>
-          <li><a href="publications.html">学术成果</a></li>
-          <li><a href="admission.html">招生信息</a></li>
+      <div class="nav-right">
+        <nav class="main-nav">
+          <ul>
+            <li><a href="index.html">首页</a></li>
+            <li><a href="about.html">实验室简介</a></li>
 
-        </ul>
-      </nav>
+            <li><a href="team.html">团队成员</a></li>
+            <li><a href="publications.html">学术成果</a></li>
+            <li><a href="admission.html">招生信息</a></li>
+
+          </ul>
+        </nav>
+        <div class="search-box">
+          <input type="text" placeholder="搜索...">
+          <button type="submit"><i class="fas fa-search"></i></button>
+        </div>
+      </div>
       <div class="menu-toggle">
         <i class="fas fa-bars"></i>
-      </div>
-      <div class="search-box">
-        <input type="text" placeholder="搜索...">
-        <button type="submit"><i class="fas fa-search"></i></button>
       </div>
     </div>
   </header>
 
-  <div class="page-header">
-    <div class="container">
-      <div class="page-header-content">
-        <h1>联系方式</h1>
-        <p>欢迎通过以下方式与我们取得联系，了解更多关于实验室的信息</p>
-        <ul class="breadcrumb">
-          <li><a href="index.html">首页</a></li>
-          <li>联系方式</li>
-        </ul>
+  <main>
+    <div class="contact-section"
+      style="background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%); color: white; text-align: center; padding: 140px 0 60px;">
+      <div class="container">
+        <h1 style="font-size: 2.5rem; margin-bottom: 1rem;">联系我们</h1>
+        <p style="max-width: 800px; margin: 0 auto;">
+          欢迎通过以下方式与我们取得联系，了解我们的研究工作或寻求合作机会
+        </p>
       </div>
     </div>
-  </div>
 
-  <!-- 联系信息 -->
-  <section class="contact-container">
-    <div class="container">
-      <div class="contact-grid">
-        <div class="contact-info">
-          <h2>联系我们</h2>
-          <p class="contact-text">
-            如果您对我们的研究工作感兴趣，或者希望了解更多关于合作机会、招生政策等信息，请随时与我们联系。我们将尽快回复您的咨询。
-          </p>
+    <!-- 联系信息 -->
+    <section class="contact-container">
+      <div class="container">
+        <div class="contact-grid">
+          <div class="contact-info">
+            <h2>联系我们</h2>
+            <p class="contact-text">
+              如果您对我们的研究工作感兴趣，或者希望了解更多关于合作机会、招生政策等信息，请随时与我们联系。我们将尽快回复您的咨询。
+            </p>
 
-          <div class="contact-methods">
-            <!-- 电子邮件 -->
-            <div class="contact-method">
-              <div class="contact-icon">
-                <i class="fas fa-envelope"></i>
+            <div class="contact-methods">
+              <!-- 电子邮件 -->
+              <div class="contact-method">
+                <div class="contact-icon">
+                  <i class="fas fa-envelope"></i>
+                </div>
+                <div class="contact-details">
+                  <h3>电子邮件</h3>
+                  <p>info@researchlab.edu.cn</p>
+                  <p>admission@researchlab.edu.cn（招生咨询）</p>
+                </div>
               </div>
-              <div class="contact-details">
-                <h3>电子邮件</h3>
-                <p>info@researchlab.edu.cn</p>
-                <p>admission@researchlab.edu.cn（招生咨询）</p>
+
+              <!-- 电话 -->
+              <div class="contact-method">
+                <div class="contact-icon">
+                  <i class="fas fa-phone-alt"></i>
+                </div>
+                <div class="contact-details">
+                  <h3>电话</h3>
+                  <p>+86 123 4567 8900</p>
+                  <p>+86 123 4567 8901（招生办公室）</p>
+                </div>
+              </div>
+
+              <!-- 地址 -->
+              <div class="contact-method">
+                <div class="contact-icon">
+                  <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <div class="contact-details">
+                  <h3>实验室地址</h3>
+                  <p>中国某省某市某区某路123号</p>
+                  <p>某大学科研大楼B座305-308室</p>
+                </div>
+              </div>
+
+              <!-- 办公时间 -->
+              <div class="contact-method">
+                <div class="contact-icon">
+                  <i class="fas fa-clock"></i>
+                </div>
+                <div class="contact-details">
+                  <h3>办公时间</h3>
+                  <p>周一至周五: 上午 9:00 - 下午 5:30</p>
+                  <p>周末和节假日休息</p>
+                </div>
               </div>
             </div>
 
-            <!-- 电话 -->
-            <div class="contact-method">
-              <div class="contact-icon">
-                <i class="fas fa-phone-alt"></i>
+            <h3>关注我们</h3>
+            <div class="social-media">
+              <a href="#" class="social-link" title="微信"><i class="fab fa-weixin"></i></a>
+              <a href="#" class="social-link" title="微博"><i class="fab fa-weibo"></i></a>
+              <a href="#" class="social-link" title="Github"><i class="fab fa-github"></i></a>
+              <a href="#" class="social-link" title="知乎"><i class="fab fa-zhihu"></i></a>
+              <a href="#" class="social-link" title="领英"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+          </div>
+
+          <div class="contact-form">
+            <h2 class="form-title">发送消息</h2>
+            <form id="contactForm">
+              <div class="form-group">
+                <label for="name" class="form-label">姓名</label>
+                <input type="text" id="name" class="form-control" placeholder="请输入您的姓名" required>
               </div>
-              <div class="contact-details">
-                <h3>电话</h3>
-                <p>+86 123 4567 8900</p>
-                <p>+86 123 4567 8901（招生办公室）</p>
+              <div class="form-group">
+                <label for="email" class="form-label">电子邮箱</label>
+                <input type="email" id="email" class="form-control" placeholder="请输入您的电子邮箱" required>
               </div>
-            </div>
-
-            <!-- 地址 -->
-            <div class="contact-method">
-              <div class="contact-icon">
-                <i class="fas fa-map-marker-alt"></i>
+              <div class="form-group">
+                <label for="subject" class="form-label">主题</label>
+                <input type="text" id="subject" class="form-control" placeholder="请输入消息主题" required>
               </div>
-              <div class="contact-details">
-                <h3>实验室地址</h3>
-                <p>中国某省某市某区某路123号</p>
-                <p>某大学科研大楼B座305-308室</p>
+              <div class="form-group">
+                <label for="message" class="form-label">消息内容</label>
+                <textarea id="message" class="form-control" placeholder="请输入您的消息内容" required></textarea>
               </div>
-            </div>
-
-            <!-- 办公时间 -->
-            <div class="contact-method">
-              <div class="contact-icon">
-                <i class="fas fa-clock"></i>
-              </div>
-              <div class="contact-details">
-                <h3>办公时间</h3>
-                <p>周一至周五: 上午 9:00 - 下午 5:30</p>
-                <p>周末和节假日休息</p>
-              </div>
-            </div>
-          </div>
-
-          <h3>关注我们</h3>
-          <div class="social-media">
-            <a href="#" class="social-link" title="微信"><i class="fab fa-weixin"></i></a>
-            <a href="#" class="social-link" title="微博"><i class="fab fa-weibo"></i></a>
-            <a href="#" class="social-link" title="Github"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-link" title="知乎"><i class="fab fa-zhihu"></i></a>
-            <a href="#" class="social-link" title="领英"><i class="fab fa-linkedin-in"></i></a>
-          </div>
-        </div>
-
-        <div class="contact-form">
-          <h2 class="form-title">发送消息</h2>
-          <form id="contactForm">
-            <div class="form-group">
-              <label for="name" class="form-label">姓名</label>
-              <input type="text" id="name" class="form-control" placeholder="请输入您的姓名" required>
-            </div>
-            <div class="form-group">
-              <label for="email" class="form-label">电子邮箱</label>
-              <input type="email" id="email" class="form-control" placeholder="请输入您的电子邮箱" required>
-            </div>
-            <div class="form-group">
-              <label for="subject" class="form-label">主题</label>
-              <input type="text" id="subject" class="form-control" placeholder="请输入消息主题" required>
-            </div>
-            <div class="form-group">
-              <label for="message" class="form-label">消息内容</label>
-              <textarea id="message" class="form-control" placeholder="请输入您的消息内容" required></textarea>
-            </div>
-            <button type="submit" class="form-submit">发送消息</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- 地图和访问信息 -->
-  <section class="map-section">
-    <div class="container">
-      <div class="map-container">
-        <!-- 这里替换成实际地图嵌入代码 -->
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.215770202464!2d116.3912!3d39.9078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMznCsDU0JzI4LjEiTiAxMTbCsDIzJzI4LjMiRQ!5e0!3m2!1szh-CN!2scn!4v1605000000000!5m2!1szh-CN!2scn"
-          allowfullscreen="" loading="lazy"></iframe>
-      </div>
-
-      <div class="visit-info">
-        <!-- 交通信息 -->
-        <div class="visit-item">
-          <div class="visit-icon">
-            <i class="fas fa-bus"></i>
-          </div>
-          <h3 class="visit-title">公共交通</h3>
-          <p class="visit-text">
-            乘坐地铁1号线至大学站下车，从A出口出站，步行约10分钟可到达。
-            或乘坐公交102、305、401路至科研大楼站下车。
-          </p>
-        </div>
-
-        <!-- 停车信息 -->
-        <div class="visit-item">
-          <div class="visit-icon">
-            <i class="fas fa-car"></i>
-          </div>
-          <h3 class="visit-title">停车信息</h3>
-          <p class="visit-text">
-            校内设有访客停车场，位于科研大楼南侧。停车需提前预约并在门卫处登记。
-          </p>
-        </div>
-
-        <!-- 校园指南 -->
-        <div class="visit-item">
-          <div class="visit-icon">
-            <i class="fas fa-map"></i>
-          </div>
-          <h3 class="visit-title">校园指南</h3>
-          <p class="visit-text">
-            我们的实验室位于科研大楼B座3层。访客可在大厅前台登记后前往。
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- 常见问题 -->
-  <section class="faq-section">
-    <div class="container">
-      <div class="section-title">
-        <h2>常见问题</h2>
-        <p>以下是访客经常咨询的问题及答案，希望对您有所帮助</p>
-      </div>
-
-      <div class="faq-list">
-        <!-- 问题1 -->
-        <div class="faq-item">
-          <div class="faq-question">
-            <div>如何申请加入你们的研究团队？</div>
-            <div class="faq-toggle"></div>
-          </div>
-          <div class="faq-answer">
-            <p>申请加入我们的研究团队，请先查看"招生信息"页面了解申请要求和流程。博士生和硕士生需通过学校研究生招生系统申请，并同时发送申请材料至实验室招生邮箱。本科生可直接联系导师申请加入实验室进行科研训练。</p>
-          </div>
-        </div>
-
-        <!-- 问题2 -->
-        <div class="faq-item">
-          <div class="faq-question">
-            <div>你们实验室是否提供远程合作机会？</div>
-            <div class="faq-toggle"></div>
-          </div>
-          <div class="faq-answer">
-            <p>是的，我们欢迎与国内外高校、研究机构和企业的远程合作。如果您有合作意向，请发送详细合作提案至我们的邮箱，我们会尽快回复并安排进一步讨论。</p>
-          </div>
-        </div>
-
-        <!-- 问题3 -->
-        <div class="faq-item">
-          <div class="faq-question">
-            <div>如何获取你们实验室的开源代码和数据集？</div>
-            <div class="faq-toggle"></div>
-          </div>
-          <div class="faq-answer">
-            <p>我们的大部分研究成果都在GitHub上开源，您可以访问我们的GitHub组织页面获取代码。部分公开数据集可以通过我们的官网"资源"页面下载，部分需要填写申请表并签署使用协议后获取。</p>
-          </div>
-        </div>
-
-        <!-- 问题4 -->
-        <div class="faq-item">
-          <div class="faq-question">
-            <div>实验室是否接收访问学者？</div>
-            <div class="faq-toggle"></div>
-          </div>
-          <div class="faq-answer">
-            <p>是的，我们欢迎国内外高校和研究机构的学者来我们实验室进行短期或长期访问。如需申请，请提前3个月发送您的个人简历、研究计划和访问时间至实验室邮箱。</p>
-          </div>
-        </div>
-
-        <!-- 问题5 -->
-        <div class="faq-item">
-          <div class="faq-question">
-            <div>实验室是否提供实习机会？</div>
-            <div class="faq-toggle"></div>
-          </div>
-          <div class="faq-answer">
-            <p>我们定期为本科生和硕士生提供实习机会，通常在寒暑假期间。实习信息会在"新闻动态"页面和社交媒体上发布，感兴趣的学生可以按照要求提交申请。</p>
+              <button type="submit" class="form-submit">发送消息</button>
+            </form>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+
+    <!-- 地图和访问信息 -->
+    <section class="map-section">
+      <div class="container">
+        <div class="map-container">
+          <!-- 这里替换成实际地图嵌入代码 -->
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.215770202464!2d116.3912!3d39.9078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMznCsDU0JzI4LjEiTiAxMTbCsDIzJzI4LjMiRQ!5e0!3m2!1szh-CN!2scn!4v1605000000000!5m2!1szh-CN!2scn"
+            allowfullscreen="" loading="lazy"></iframe>
+        </div>
+
+        <div class="visit-info">
+          <!-- 交通信息 -->
+          <div class="visit-item">
+            <div class="visit-icon">
+              <i class="fas fa-bus"></i>
+            </div>
+            <h3 class="visit-title">公共交通</h3>
+            <p class="visit-text">
+              乘坐地铁1号线至大学站下车，从A出口出站，步行约10分钟可到达。
+              或乘坐公交102、305、401路至科研大楼站下车。
+            </p>
+          </div>
+
+          <!-- 停车信息 -->
+          <div class="visit-item">
+            <div class="visit-icon">
+              <i class="fas fa-car"></i>
+            </div>
+            <h3 class="visit-title">停车信息</h3>
+            <p class="visit-text">
+              校内设有访客停车场，位于科研大楼南侧。停车需提前预约并在门卫处登记。
+            </p>
+          </div>
+
+          <!-- 校园指南 -->
+          <div class="visit-item">
+            <div class="visit-icon">
+              <i class="fas fa-map"></i>
+            </div>
+            <h3 class="visit-title">校园指南</h3>
+            <p class="visit-text">
+              我们的实验室位于科研大楼B座3层。访客可在大厅前台登记后前往。
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 常见问题 -->
+    <section class="faq-section">
+      <div class="container">
+        <div class="section-title">
+          <h2>常见问题</h2>
+          <p>以下是访客经常咨询的问题及答案，希望对您有所帮助</p>
+        </div>
+
+        <div class="faq-list">
+          <!-- 问题1 -->
+          <div class="faq-item">
+            <div class="faq-question">
+              <div>如何申请加入你们的研究团队？</div>
+              <div class="faq-toggle"></div>
+            </div>
+            <div class="faq-answer">
+              <p>申请加入我们的研究团队，请先查看"招生信息"页面了解申请要求和流程。博士生和硕士生需通过学校研究生招生系统申请，并同时发送申请材料至实验室招生邮箱。本科生可直接联系导师申请加入实验室进行科研训练。</p>
+            </div>
+          </div>
+
+          <!-- 问题2 -->
+          <div class="faq-item">
+            <div class="faq-question">
+              <div>你们实验室是否提供远程合作机会？</div>
+              <div class="faq-toggle"></div>
+            </div>
+            <div class="faq-answer">
+              <p>是的，我们欢迎与国内外高校、研究机构和企业的远程合作。如果您有合作意向，请发送详细合作提案至我们的邮箱，我们会尽快回复并安排进一步讨论。</p>
+            </div>
+          </div>
+
+          <!-- 问题3 -->
+          <div class="faq-item">
+            <div class="faq-question">
+              <div>如何获取你们实验室的开源代码和数据集？</div>
+              <div class="faq-toggle"></div>
+            </div>
+            <div class="faq-answer">
+              <p>我们的大部分研究成果都在GitHub上开源，您可以访问我们的GitHub组织页面获取代码。部分公开数据集可以通过我们的官网"资源"页面下载，部分需要填写申请表并签署使用协议后获取。</p>
+            </div>
+          </div>
+
+          <!-- 问题4 -->
+          <div class="faq-item">
+            <div class="faq-question">
+              <div>实验室是否接收访问学者？</div>
+              <div class="faq-toggle"></div>
+            </div>
+            <div class="faq-answer">
+              <p>是的，我们欢迎国内外高校和研究机构的学者来我们实验室进行短期或长期访问。如需申请，请提前3个月发送您的个人简历、研究计划和访问时间至实验室邮箱。</p>
+            </div>
+          </div>
+
+          <!-- 问题5 -->
+          <div class="faq-item">
+            <div class="faq-question">
+              <div>实验室是否提供实习机会？</div>
+              <div class="faq-toggle"></div>
+            </div>
+            <div class="faq-answer">
+              <p>我们定期为本科生和硕士生提供实习机会，通常在寒暑假期间。实习信息会在"新闻动态"页面和社交媒体上发布，感兴趣的学生可以按照要求提交申请。</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <!-- 页脚 -->
   <footer class="footer">
@@ -659,14 +626,14 @@
       <div class="footer-content">
         <div class="footer-column">
           <h3>关于我们</h3>
-          <p>SPIN Lab致力于推荐系统、机器学习等领域的前沿研究，培养高水平研究人才。</p>
+          <p>SPIN Lab致力于具身智能、机器学习等领域的前沿研究，培养高水平研究人才。</p>
         </div>
         <div class="footer-column">
           <h3>快速链接</h3>
           <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="about.html">实验室简介</a></li>
-            <li><a href="research.html">研究方向</a></li>
+
             <li><a href="team.html">团队成员</a></li>
             <li><a href="publications.html">学术成果</a></li>
           </ul>
