--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <ul>
             <li><a href="index.html" class="active">首页</a></li>
             <li><a href="about.html">实验室简介</a></li>
-            <li><a href="research.html">研究方向</a></li>
+
             <li><a href="team.html">团队成员</a></li>
             <li><a href="publications.html">学术成果</a></li>
             <li><a href="admission.html">招生信息</a></li>
@@ -110,7 +110,7 @@
           <div class="news-content">
             <span class="badge">重要通知</span>
             <h3>我们的论文被ICLR 2023接收</h3>
-            <p>恭喜团队成员在生成式推荐系统领域的研究成果被ICLR 2023会议接收！</p>
+            <p>恭喜团队成员在生成式具身智能领域的研究成果被ICLR 2023会议接收！</p>
             <a href="news-detail.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
@@ -126,7 +126,7 @@
           <div class="news-content">
             <span class="badge">学术活动</span>
             <h3>实验室成功举办学术研讨会</h3>
-            <p>我们实验室成功举办了"前沿推荐系统技术"专题研讨会，多位专家学者参与...</p>
+            <p>我们实验室成功举办了"前沿具身智能技术"专题研讨会，多位专家学者参与...</p>
             <a href="news-detail.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
@@ -142,13 +142,13 @@
           <div class="news-content">
             <span class="badge">项目进展</span>
             <h3>国家自然科学基金项目启动</h3>
-            <p>我们的"基于因果推断的公平推荐系统"国家自然科学基金项目正式启动...</p>
+            <p>我们的"基于因果推断的公平具身智能"国家自然科学基金项目正式启动...</p>
             <a href="news-detail.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
       <div class="view-all-container">
-        <a href="news.html" class="btn btn-outline">查看全部新闻</a>
+        <a href="publications.html" class="btn btn-outline">查看全部新闻</a>
       </div>
     </div>
   </section>
@@ -162,33 +162,33 @@
           <div class="area-icon">
             <i class="fas fa-robot"></i>
           </div>
-          <h3>生成式推荐系统</h3>
-          <p>结合生成模型与推荐系统，研究个性化内容生成与推荐的创新方法。</p>
-          <a href="research.html#generative" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
+          <h3>生成式具身智能</h3>
+          <p>结合生成模型与具身智能，研究个性化内容生成与推荐的创新方法。</p>
+          <a href="about.html#generative" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="area-card">
           <div class="area-icon">
             <i class="fas fa-balance-scale"></i>
           </div>
-          <h3>公平推荐系统</h3>
-          <p>研究算法偏见问题，开发更加公平、无歧视的推荐技术。</p>
-          <a href="research.html#fairness" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
+          <h3>公平具身智能</h3>
+          <p>研究具身智能中的公平性问题，致力于减轻算法偏见，提升推荐结果的公平性。</p>
+          <a href="about.html#fairness" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
+        </div>
+        <div class="area-card">
+          <div class="area-icon">
+            <i class="fas fa-link"></i>
+          </div>
+          <h3>因果具身智能</h3>
+          <p>应用因果推断方法解决具身智能中的偏差问题，提升推荐质量和解释性。</p>
+          <a href="about.html#causal" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="area-card">
           <div class="area-icon">
             <i class="fas fa-project-diagram"></i>
           </div>
-          <h3>因果推荐系统</h3>
-          <p>应用因果推断方法解决推荐系统中的选择偏差和反事实推理问题。</p>
-          <a href="research.html#causal" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
-        </div>
-        <div class="area-card">
-          <div class="area-icon">
-            <i class="fas fa-network-wired"></i>
-          </div>
           <h3>图神经网络</h3>
-          <p>探索图神经网络在社交推荐和知识图谱增强推荐中的应用。</p>
-          <a href="research.html#gnn" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
+          <p>利用图神经网络建模复杂关系，应用于社交推荐和知识图谱增强推荐。</p>
+          <a href="about.html#gnn" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
         </div>
       </div>
     </div>
@@ -210,7 +210,7 @@
               <li>
                 <div class="pub-info">
                   <span class="pub-venue">ICLR 2023</span>
-                  <h4>生成式推荐系统的新方法与应用</h4>
+                  <h4>生成式具身智能的新方法与应用</h4>
                   <p class="pub-authors">张三, 李四, 王五, 赵六</p>
                   <div class="pub-links">
                     <a href="#" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
@@ -220,7 +220,7 @@
                 </div>
                 <div class="pub-tags">
                   <span class="tag">生成式模型</span>
-                  <span class="tag">推荐系统</span>
+                  <span class="tag">具身智能</span>
                 </div>
               </li>
               <li>
@@ -278,16 +278,16 @@
       <div class="team-grid">
         <div class="team-member">
           <div class="member-photo">
-            <img src="images/people.jpg" alt="夏教授">
+            <img src="images/xiayan.png" alt="夏彦">
           </div>
           <div class="member-info">
-            <h3>夏教授</h3>
-            <p class="member-title">实验室主任 | 教授</p>
+            <h3>夏彦</h3>
+            <p class="member-title">实验室主任 | 预聘副教授</p>
             <p class="member-research">研究方向：具身智能、机器学习</p>
             <div class="member-social">
-              <a href="#"><i class="fas fa-envelope"></i></a>
-              <a href="#"><i class="fas fa-globe"></i></a>
-              <a href="#"><i class="fab fa-google"></i></a>
+              <a href="https://saids.ustc.edu.cn/2024/1105/c36363a686123/page.htm"><i class="fas fa-envelope"></i></a>
+              <a href="https://yan-xia.github.io/"><i class="fas fa-globe"></i></a>
+              <a href="https://yan-xia.github.io/"><i class="fab fa-google"></i></a>
             </div>
           </div>
         </div>
@@ -308,31 +308,31 @@
         </div>
         <div class="team-member">
           <div class="member-photo">
-            <img src="images/people.jpg" alt="王博士">
+            <img src="images/caoxuewei.jpg" alt="王博士">
           </div>
           <div class="member-info">
-            <h3>王博士</h3>
-            <p class="member-title">助理教授</p>
-            <p class="member-research">研究方向：生成式模型、NLP</p>
+            <h3>曹学伟</h3>
+            <p class="member-title">博士研究生</p>
+            <p class="member-research">研究方向：点云处理、多模态大模型</p>
             <div class="member-social">
-              <a href="#"><i class="fas fa-envelope"></i></a>
-              <a href="#"><i class="fas fa-globe"></i></a>
-              <a href="#"><i class="fab fa-google"></i></a>
+              <a href="https://cxweb.site/"><i class="fas fa-envelope"></i></a>
+              <a href="https://cxweb.site/"><i class="fas fa-globe"></i></a>
+              <a href="https://cxweb.site/"><i class="fab fa-google"></i></a>
             </div>
           </div>
         </div>
         <div class="team-member">
           <div class="member-photo">
-            <img src="images/people.jpg" alt="赵博士">
+            <img src="images/wuyuhan.jfif" alt="吴雨涵">
           </div>
           <div class="member-info">
-            <h3>赵博士</h3>
-            <p class="member-title">博士后研究员</p>
-            <p class="member-research">研究方向：图神经网络</p>
+            <h3>吴雨涵</h3>
+            <p class="member-title">博士研究生</p>
+            <p class="member-research">研究方向：具身智能、机器人导航</p>
             <div class="member-social">
-              <a href="#"><i class="fas fa-envelope"></i></a>
-              <a href="#"><i class="fas fa-globe"></i></a>
-              <a href="#"><i class="fab fa-google"></i></a>
+              <a href="https://github.com/Yuhan321"><i class="fas fa-envelope"></i></a>
+              <a href="https://github.com/Yuhan321"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/Yuhan321"><i class="fab fa-google"></i></a>
             </div>
           </div>
         </div>
@@ -351,7 +351,7 @@
           <h2>联系我们</h2>
           <p>欢迎联系SPIN Lab了解更多信息或讨论合作机会</p>
           <ul class="contact-list">
-            <li><i class="fas fa-map-marker-alt"></i> 北京市海淀区实验室大楼B座305室</li>
+            <li><i class="fas fa-map-marker-alt"></i> 中国科学技术大学苏州高等研究院</li>
             <li><i class="fas fa-envelope"></i> spinlab@example.edu.cn</li>
             <li><i class="fas fa-phone"></i> +86 010-12345678</li>
             <li><i class="fas fa-clock"></i> 工作日: 9:00-17:00</li>
@@ -376,14 +376,14 @@
       <div class="footer-content">
         <div class="footer-column">
           <h3>关于我们</h3>
-          <p>SPIN Lab致力于推荐系统、机器学习等领域的前沿研究，培养高水平研究人才。</p>
+          <p>SPIN Lab致力于具身智能、机器学习等领域的前沿研究，培养高水平研究人才。</p>
         </div>
         <div class="footer-column">
           <h3>快速链接</h3>
           <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="about.html">实验室简介</a></li>
-            <li><a href="research.html">研究方向</a></li>
+
             <li><a href="team.html">团队成员</a></li>
             <li><a href="publications.html">学术成果</a></li>
           </ul>
