--- a/admission.html
+++ b/admission.html
@@ -10,43 +10,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
   <style>
-    .page-header {
-      background-color: var(--light-gray);
-      padding: 120px 0 60px;
-      text-align: center;
-      position: relative;
-    }
-
-    .page-header::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-image: url('images/admission-bg.jpg');
-      background-size: cover;
-      background-position: center;
-      opacity: 0.1;
-      z-index: 1;
-    }
-
-    .page-header-content {
-      position: relative;
-      z-index: 2;
-    }
-
-    .page-header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-
-    .page-header p {
-      max-width: 800px;
-      margin: 0 auto;
-      color: var(--dark-gray);
-    }
-
     .breadcrumb {
       list-style: none;
       display: flex;
@@ -70,7 +33,7 @@
     }
 
     .admission-section {
-      padding: 60px 0;
+      padding: 30px 0;
     }
 
     .admission-section:nth-child(even) {
@@ -89,16 +52,7 @@
       display: inline-block;
     }
 
-    .section-title h2::after {
-      content: '';
-      position: absolute;
-      bottom: -10px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 80px;
-      height: 3px;
-      background-color: var(--primary-color);
-    }
+
 
     .section-title p {
       max-width: 700px;
@@ -379,296 +333,292 @@
           <h1>SPIN Lab</h1>
         </a>
       </div>
-      <nav class="main-nav">
-        <ul>
-          <li><a href="index.html">首页</a></li>
-          <li><a href="about.html">实验室简介</a></li>
-          <li><a href="research.html">研究方向</a></li>
-          <li><a href="team.html">团队成员</a></li>
-          <li><a href="publications.html">学术成果</a></li>
-          <li><a href="admission.html">招生信息</a></li>
+      <div class="nav-right">
+        <nav class="main-nav">
+          <ul>
+            <li><a href="index.html">首页</a></li>
+            <li><a href="about.html">实验室简介</a></li>
 
-        </ul>
-      </nav>
+            <li><a href="team.html">团队成员</a></li>
+            <li><a href="publications.html">学术成果</a></li>
+            <li><a href="admission.html" class="active">招生信息</a></li>
+          </ul>
+        </nav>
+        <div class="search-box">
+          <input type="text" placeholder="搜索...">
+          <button type="submit"><i class="fas fa-search"></i></button>
+        </div>
+      </div>
       <div class="menu-toggle">
         <i class="fas fa-bars"></i>
-      </div>
-      <div class="search-box">
-        <input type="text" placeholder="搜索...">
-        <button type="submit"><i class="fas fa-search"></i></button>
       </div>
     </div>
   </header>
 
-  <div class="page-header">
-    <div class="container">
-      <div class="page-header-content">
-        <h1>招生信息</h1>
-        <p>欢迎优秀学生加入我们的研究团队，共同探索推荐系统和机器学习的前沿研究</p>
-        <ul class="breadcrumb">
-          <li><a href="index.html">首页</a></li>
-          <li>招生信息</li>
-        </ul>
+  <main>
+    <div class="admission-section"
+      style="background: linear-gradient(135deg, var(--primary-color) 0%, var(--tertiary-color) 100%); color: white; text-align: center; padding: 140px 0 60px;">
+      <div class="container">
+        <h1 style="font-size: 2.5rem; margin-bottom: 1rem;">加入我们的团队</h1>
+        <p style="max-width: 800px; margin: 0 auto;">
+          我们欢迎对具身智能和机器学习研究充满热情的优秀学者加入我们的团队
+        </p>
       </div>
     </div>
-  </div>
 
-  <!-- 招生项目 -->
-  <section class="admission-section">
-    <div class="container">
-      <div class="section-title">
-        <h2>招生项目</h2>
-        <p>我们实验室提供多种学位项目，欢迎优秀学生申请加入我们的研究团队</p>
-      </div>
+    <!-- 招生项目 -->
+    <section class="admission-section">
+      <div class="container">
 
-      <div class="programs-container">
-        <!-- 博士项目 -->
-        <div class="program-card">
-          <div class="program-header">
-            <h3>博士研究生</h3>
-          </div>
-          <div class="program-content">
-            <ul>
-              <li>全日制博士研究生项目</li>
-              <li>学制3-5年</li>
-              <li>每年提供全额奖学金</li>
-              <li>参与国际顶级会议和期刊论文发表</li>
-              <li>有机会参与国际交流和企业实习</li>
-            </ul>
-            <a href="#application" class="btn">申请流程</a>
-          </div>
-        </div>
-
-        <!-- 硕士项目 -->
-        <div class="program-card">
-          <div class="program-header">
-            <h3>硕士研究生</h3>
-          </div>
-          <div class="program-content">
-            <ul>
-              <li>全日制硕士研究生项目</li>
-              <li>学制2-3年</li>
-              <li>提供奖学金和助研机会</li>
-              <li>参与高水平会议和期刊论文发表</li>
-              <li>有机会继续攻读博士学位</li>
-            </ul>
-            <a href="#application" class="btn">申请流程</a>
-          </div>
-        </div>
-
-        <!-- 本科生项目 -->
-        <div class="program-card">
-          <div class="program-header">
-            <h3>本科生科研</h3>
-          </div>
-          <div class="program-content">
-            <ul>
-              <li>面向高年级本科生的科研训练</li>
-              <li>参与实验室实际研究项目</li>
-              <li>提供本科生科研奖励计划</li>
-              <li>优秀者可推荐攻读研究生</li>
-              <li>培养学术研究和创新能力</li>
-            </ul>
-            <a href="#application" class="btn">申请流程</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- 申请要求 -->
-  <section class="admission-section" style="background-color: var(--light-gray);">
-    <div class="container">
-      <div class="section-title">
-        <h2>申请要求</h2>
-        <p>我们期待具有扎实专业基础和研究热情的优秀学生加入我们的团队</p>
-      </div>
-
-      <div class="requirements-list">
-        <!-- 学术背景 -->
-        <div class="requirement-item">
-          <div class="requirement-title">
-            <i class="fas fa-graduation-cap"></i>
-            <h3>学术背景</h3>
-          </div>
-          <p>计算机科学、人工智能、数据科学、应用数学或相关专业背景，具有扎实的编程和数学基础。博士申请者需具有相关领域的硕士学位或同等研究经历。</p>
-        </div>
-
-        <!-- 研究经验 -->
-        <div class="requirement-item">
-          <div class="requirement-title">
-            <i class="fas fa-flask"></i>
-            <h3>研究经验</h3>
-          </div>
-          <p>博士申请者需具有相关研究经验，并有发表高质量论文的记录。硕士申请者应有一定的科研经历或项目实践经验。本科生应具有良好的学习成绩和科研潜力。</p>
-        </div>
-
-        <!-- 专业技能 -->
-        <div class="requirement-item">
-          <div class="requirement-title">
-            <i class="fas fa-code"></i>
-            <h3>专业技能</h3>
-          </div>
-          <p>熟练掌握Python、Java等编程语言，了解深度学习框架如PyTorch或TensorFlow，具备数据分析和机器学习基础知识。了解推荐系统、自然语言处理或图神经网络等相关领域为佳。</p>
-        </div>
-
-        <!-- 语言能力 -->
-        <div class="requirement-item">
-          <div class="requirement-title">
-            <i class="fas fa-language"></i>
-            <h3>语言能力</h3>
-          </div>
-          <p>良好的中英文读写和交流能力，能够阅读英文文献，撰写英文论文，参与国际学术交流。国际学生需提供语言能力证明。</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- 申请流程 -->
-  <section id="application" class="admission-section">
-    <div class="container">
-      <div class="section-title">
-        <h2>申请流程</h2>
-        <p>按照以下步骤申请加入我们的研究团队</p>
-      </div>
-
-      <div class="application-steps">
-        <div class="step-line"></div>
-
-        <!-- 步骤1 -->
-        <div class="step-item">
-          <div class="step-number">1</div>
-          <div class="step-content">
-            <h3>提交申请材料</h3>
-            <p>通过学校研究生招生系统提交申请，包括个人简历、成绩单、研究计划、代表性论文或项目（如有）以及推荐信。请在研究计划中明确表示有意加入我们实验室。</p>
-          </div>
-        </div>
-
-        <!-- 步骤2 -->
-        <div class="step-item">
-          <div class="step-number">2</div>
-          <div class="step-content">
-            <h3>联系导师</h3>
-            <p>发送邮件给实验室导师，介绍自己的研究兴趣和背景，附上简历和研究计划。建议在邮件主题中注明"研究生申请"字样。</p>
-          </div>
-        </div>
-
-        <!-- 步骤3 -->
-        <div class="step-item">
-          <div class="step-number">3</div>
-          <div class="step-content">
-            <h3>面试</h3>
-            <p>初步筛选后，我们将邀请合适的候选人参加面试。面试内容包括专业知识考核、研究能力评估以及英语水平测试。面试可能以现场或线上方式进行。</p>
-          </div>
-        </div>
-
-        <!-- 步骤4 -->
-        <div class="step-item">
-          <div class="step-number">4</div>
-          <div class="step-content">
-            <h3>录取通知</h3>
-            <p>面试通过后，我们将向成功的申请者发出录取通知，并提供相关奖学金和资助信息。请按照通知要求在规定时间内确认入学意向。</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- 重要日期 -->
-  <section class="admission-section" style="background-color: var(--light-gray);">
-    <div class="container">
-      <div class="section-title">
-        <h2>重要日期</h2>
-        <p>请注意以下招生关键时间节点</p>
-      </div>
-
-      <div class="key-dates">
-        <div class="date-line"></div>
-        <div class="date-items">
-          <!-- 日期1 -->
-          <div class="date-item">
-            <div class="date-marker"></div>
-            <div class="date-content">
-              <h4>申请开放</h4>
-              <p>11月15日</p>
+        <div class="programs-container">
+          <!-- 博士项目 -->
+          <div class="program-card">
+            <div class="program-header">
+              <h3>博士研究生</h3>
+            </div>
+            <div class="program-content">
+              <ul>
+                <li>全日制博士研究生项目</li>
+                <li>学制3-5年</li>
+                <li>每年提供全额奖学金</li>
+                <li>参与国际顶级会议和期刊论文发表</li>
+                <li>有机会参与国际交流和企业实习</li>
+              </ul>
+              <a href="#application" class="btn">申请流程</a>
             </div>
           </div>
 
-          <!-- 日期2 -->
-          <div class="date-item">
-            <div class="date-marker"></div>
-            <div class="date-content">
-              <h4>申请截止</h4>
-              <p>1月15日</p>
+          <!-- 硕士项目 -->
+          <div class="program-card">
+            <div class="program-header">
+              <h3>硕士研究生</h3>
+            </div>
+            <div class="program-content">
+              <ul>
+                <li>全日制硕士研究生项目</li>
+                <li>学制2-3年</li>
+                <li>提供奖学金和助研机会</li>
+                <li>参与高水平会议和期刊论文发表</li>
+                <li>有机会继续攻读博士学位</li>
+              </ul>
+              <a href="#application" class="btn">申请流程</a>
             </div>
           </div>
 
-          <!-- 日期3 -->
-          <div class="date-item">
-            <div class="date-marker"></div>
-            <div class="date-content">
-              <h4>面试通知</h4>
-              <p>2月15日</p>
+          <!-- 本科生项目 -->
+          <div class="program-card">
+            <div class="program-header">
+              <h3>本科生科研</h3>
             </div>
-          </div>
-
-          <!-- 日期4 -->
-          <div class="date-item">
-            <div class="date-marker"></div>
-            <div class="date-content">
-              <h4>面试</h4>
-              <p>3月1-15日</p>
-            </div>
-          </div>
-
-          <!-- 日期5 -->
-          <div class="date-item">
-            <div class="date-marker"></div>
-            <div class="date-content">
-              <h4>录取通知</h4>
-              <p>4月1日</p>
+            <div class="program-content">
+              <ul>
+                <li>面向高年级本科生的科研训练</li>
+                <li>参与实验室实际研究项目</li>
+                <li>提供本科生科研奖励计划</li>
+                <li>优秀者可推荐攻读研究生</li>
+                <li>培养学术研究和创新能力</li>
+              </ul>
+              <a href="#application" class="btn">申请流程</a>
             </div>
           </div>
         </div>
       </div>
+    </section>
 
-      <div class="contact-info">
-        <div class="contact-header">
-          <h3>联系方式</h3>
-          <p>如有问题，请通过以下方式联系我们</p>
+    <!-- 申请要求 -->
+    <section class="admission-section" style="background-color: var(--light-gray);">
+      <div class="container">
+        <div class="section-title">
+          <h2>申请要求</h2>
+          <p>我们期待具有扎实专业基础和研究热情的优秀学生加入我们的团队</p>
         </div>
-        <div class="contact-methods">
-          <div class="contact-method">
-            <div class="contact-icon">
-              <i class="fas fa-envelope"></i>
+
+        <div class="requirements-list">
+          <!-- 学术背景 -->
+          <div class="requirement-item">
+            <div class="requirement-title">
+              <i class="fas fa-graduation-cap"></i>
+              <h3>学术背景</h3>
             </div>
-            <div>
-              <h4>招生邮箱</h4>
-              <p>admission@lab.edu.cn</p>
+            <p>计算机科学、人工智能、数据科学、应用数学或相关专业背景，具有扎实的编程和数学基础。博士申请者需具有相关领域的硕士学位或同等研究经历。</p>
+          </div>
+
+          <!-- 研究经验 -->
+          <div class="requirement-item">
+            <div class="requirement-title">
+              <i class="fas fa-flask"></i>
+              <h3>研究经验</h3>
+            </div>
+            <p>博士申请者需具有相关研究经验，并有发表高质量论文的记录。硕士申请者应有一定的科研经历或项目实践经验。本科生应具有良好的学习成绩和科研潜力。</p>
+          </div>
+
+          <!-- 专业技能 -->
+          <div class="requirement-item">
+            <div class="requirement-title">
+              <i class="fas fa-code"></i>
+              <h3>专业技能</h3>
+            </div>
+            <p>熟练掌握Python、Java等编程语言，了解深度学习框架如PyTorch或TensorFlow，具备数据分析和机器学习基础知识。了解推荐系统、自然语言处理或图神经网络等相关领域为佳。</p>
+          </div>
+
+          <!-- 语言能力 -->
+          <div class="requirement-item">
+            <div class="requirement-title">
+              <i class="fas fa-language"></i>
+              <h3>语言能力</h3>
+            </div>
+            <p>良好的中英文读写和交流能力，能够阅读英文文献，撰写英文论文，参与国际学术交流。国际学生需提供语言能力证明。</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 申请流程 -->
+    <section id="application" class="admission-section">
+      <div class="container">
+        <div class="section-title">
+          <h2>申请流程</h2>
+          <p>按照以下步骤申请加入我们的研究团队</p>
+        </div>
+
+        <div class="application-steps">
+          <div class="step-line"></div>
+
+          <!-- 步骤1 -->
+          <div class="step-item">
+            <div class="step-number">1</div>
+            <div class="step-content">
+              <h3>提交申请材料</h3>
+              <p>通过学校研究生招生系统提交申请，包括个人简历、成绩单、研究计划、代表性论文或项目（如有）以及推荐信。请在研究计划中明确表示有意加入我们实验室。</p>
             </div>
           </div>
-          <div class="contact-method">
-            <div class="contact-icon">
-              <i class="fas fa-phone"></i>
-            </div>
-            <div>
-              <h4>招生电话</h4>
-              <p>+86 123 4567 8901</p>
+
+          <!-- 步骤2 -->
+          <div class="step-item">
+            <div class="step-number">2</div>
+            <div class="step-content">
+              <h3>联系导师</h3>
+              <p>发送邮件给实验室导师，介绍自己的研究兴趣和背景，附上简历和研究计划。建议在邮件主题中注明"研究生申请"字样。</p>
             </div>
           </div>
-          <div class="contact-method">
-            <div class="contact-icon">
-              <i class="fas fa-building"></i>
+
+          <!-- 步骤3 -->
+          <div class="step-item">
+            <div class="step-number">3</div>
+            <div class="step-content">
+              <h3>面试</h3>
+              <p>初步筛选后，我们将邀请合适的候选人参加面试。面试内容包括专业知识考核、研究能力评估以及英语水平测试。面试可能以现场或线上方式进行。</p>
             </div>
-            <div>
-              <h4>招生办公室</h4>
-              <p>科研大楼B座306室</p>
+          </div>
+
+          <!-- 步骤4 -->
+          <div class="step-item">
+            <div class="step-number">4</div>
+            <div class="step-content">
+              <h3>录取通知</h3>
+              <p>面试通过后，我们将向成功的申请者发出录取通知，并提供相关奖学金和资助信息。请按照通知要求在规定时间内确认入学意向。</p>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+
+    <!-- 重要日期 -->
+    <section class="admission-section" style="background-color: var(--light-gray);">
+      <div class="container">
+        <div class="section-title">
+          <h2>重要日期</h2>
+          <p>请注意以下招生关键时间节点</p>
+        </div>
+
+        <div class="key-dates">
+          <div class="date-line"></div>
+          <div class="date-items">
+            <!-- 日期1 -->
+            <div class="date-item">
+              <div class="date-marker"></div>
+              <div class="date-content">
+                <h4>申请开放</h4>
+                <p>11月15日</p>
+              </div>
+            </div>
+
+            <!-- 日期2 -->
+            <div class="date-item">
+              <div class="date-marker"></div>
+              <div class="date-content">
+                <h4>申请截止</h4>
+                <p>1月15日</p>
+              </div>
+            </div>
+
+            <!-- 日期3 -->
+            <div class="date-item">
+              <div class="date-marker"></div>
+              <div class="date-content">
+                <h4>面试通知</h4>
+                <p>2月15日</p>
+              </div>
+            </div>
+
+            <!-- 日期4 -->
+            <div class="date-item">
+              <div class="date-marker"></div>
+              <div class="date-content">
+                <h4>面试</h4>
+                <p>3月1-15日</p>
+              </div>
+            </div>
+
+            <!-- 日期5 -->
+            <div class="date-item">
+              <div class="date-marker"></div>
+              <div class="date-content">
+                <h4>录取通知</h4>
+                <p>4月1日</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="contact-info">
+          <div class="contact-header">
+            <h3>联系方式</h3>
+            <p>如有问题，请通过以下方式联系我们</p>
+          </div>
+          <div class="contact-methods">
+            <div class="contact-method">
+              <div class="contact-icon">
+                <i class="fas fa-envelope"></i>
+              </div>
+              <div>
+                <h4>招生邮箱</h4>
+                <p>admission@lab.edu.cn</p>
+              </div>
+            </div>
+            <div class="contact-method">
+              <div class="contact-icon">
+                <i class="fas fa-phone"></i>
+              </div>
+              <div>
+                <h4>招生电话</h4>
+                <p>+86 123 4567 8901</p>
+              </div>
+            </div>
+            <div class="contact-method">
+              <div class="contact-icon">
+                <i class="fas fa-building"></i>
+              </div>
+              <div>
+                <h4>招生办公室</h4>
+                <p>科研大楼B座306室</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <!-- 页脚 -->
   <footer class="footer">
@@ -683,7 +633,7 @@
           <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="about.html">实验室简介</a></li>
-            <li><a href="research.html">研究方向</a></li>
+
             <li><a href="team.html">团队成员</a></li>
             <li><a href="publications.html">学术成果</a></li>
           </ul>
