--- a/search-results.html
+++ b/search-results.html
@@ -11,29 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
   <style>
     /* 搜索结果页特有样式 */
-    .page-header {
-      background-color: var(--light-gray);
-      padding: 120px 0 60px;
-      text-align: center;
-      position: relative;
-    }
-
-    .page-header-content {
-      position: relative;
-      z-index: 2;
-    }
-
-    .page-header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-
-    .page-header p {
-      max-width: 800px;
-      margin: 0 auto;
-      color: var(--dark-gray);
-    }
-
     .breadcrumb {
       list-style: none;
       display: flex;
@@ -255,6 +232,10 @@
         transform: rotate(360deg);
       }
     }
+
+    .search-results-section {
+      padding: 60px 0;
+    }
   </style>
 </head>
 
@@ -267,43 +248,36 @@
           <h1>SPIN Lab</h1>
         </a>
       </div>
-      <nav class="main-nav">
-        <ul>
-          <li><a href="index.html">首页</a></li>
-          <li><a href="about.html">实验室简介</a></li>
-          <li><a href="research.html">研究方向</a></li>
-          <li><a href="team.html">团队成员</a></li>
-          <li><a href="publications.html">学术成果</a></li>
-          <li><a href="admission.html">招生信息</a></li>
+      <div class="nav-right">
+        <nav class="main-nav">
+          <ul>
+            <li><a href="index.html">首页</a></li>
+            <li><a href="about.html">实验室简介</a></li>
 
-        </ul>
-      </nav>
+            <li><a href="team.html">团队成员</a></li>
+            <li><a href="publications.html">学术成果</a></li>
+            <li><a href="admission.html">招生信息</a></li>
+
+          </ul>
+        </nav>
+        <div class="search-box">
+          <input type="text" placeholder="搜索...">
+          <button type="submit"><i class="fas fa-search"></i></button>
+        </div>
+      </div>
       <div class="menu-toggle">
         <i class="fas fa-bars"></i>
-      </div>
-      <div class="search-box">
-        <input type="text" placeholder="搜索...">
-        <button type="submit"><i class="fas fa-search"></i></button>
       </div>
     </div>
   </header>
 
-  <div class="page-header">
-    <div class="container">
-      <div class="page-header-content">
-        <h1>搜索结果</h1>
-        <p>以下是您搜索的结果</p>
-        <ul class="breadcrumb">
-          <li><a href="index.html">首页</a></li>
-          <li>搜索结果</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
   <!-- 搜索结果区域 -->
-  <section class="search-results-container">
+  <section class="search-results-container"
+    style="background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%); color: white; text-align: center; padding: 140px 0 60px;">
     <div class="container">
+      <h1 style="font-size: 2.5rem; margin-bottom: 1rem;">搜索结果</h1>
+      <p style="max-width: 800px; margin: 0 auto 40px;">以下是您搜索的结果</p>
+
       <div class="search-info">
         <h2>搜索结果: <span id="searchTermDisplay" class="search-term"></span></h2>
         <span id="resultCount" class="search-count"></span>
@@ -335,14 +309,14 @@
       <div class="footer-content">
         <div class="footer-column">
           <h3>关于我们</h3>
-          <p>SPIN Lab致力于推荐系统、机器学习等领域的前沿研究，培养高水平研究人才。</p>
+          <p>SPIN Lab致力于具身智能、机器学习等领域的前沿研究，培养高水平研究人才。</p>
         </div>
         <div class="footer-column">
           <h3>快速链接</h3>
           <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="about.html">实验室简介</a></li>
-            <li><a href="research.html">研究方向</a></li>
+
             <li><a href="team.html">团队成员</a></li>
             <li><a href="publications.html">学术成果</a></li>
           </ul>
@@ -389,7 +363,7 @@
         {
           title: '研究实验室 - 首页',
           path: 'index.html',
-          content: '研究实验室致力于推荐系统、机器学习、人工智能等领域的前沿研究，培养高水平研究人才。我们的研究重点包括推荐系统、深度学习、计算机视觉、自然语言处理等方向。'
+          content: '研究实验室致力于具身智能、机器学习、人工智能等领域的前沿研究，培养高水平研究人才。我们的研究重点包括具身智能、深度学习、计算机视觉、自然语言处理等方向。'
         },
         {
           title: '实验室简介',
@@ -398,8 +372,8 @@
         },
         {
           title: '研究方向',
-          path: 'research.html',
-          content: '我们的主要研究方向包括推荐系统、深度学习、计算机视觉、自然语言处理等。在推荐系统方面，我们研究个性化推荐算法、跨域推荐、序列推荐等；在深度学习方面，我们关注神经网络模型设计、优化技术等。'
+          path: 'about.html#research-areas',
+          content: '我们的主要研究方向包括具身智能、深度学习、计算机视觉、自然语言处理等。在具身智能方面，我们研究个性化推荐算法、跨域推荐、序列推荐等；在深度学习方面，我们关注神经网络模型设计、优化技术等。'
         },
         {
           title: '团队成员',
